--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "website-rework",
+  "name": "website",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:tailwind": "npx tailwind build ./tailwind.build.css -c ./tailwind.config.js -o ./_build/css/styles.css && npx uglifycss ./_build/css/styles.css --output ./_build/css/styles.min.css",
-    "build": "npm run build:tailwind && npx @11ty/eleventy",
-    "watch": "npx eleventy --watch",
-    "serve": "npx eleventy --serve"
+    "clean": "rimraf _site && rimraf _tmp",
+    "build": "npm run clean && NODE_ENV=production npx postcss tailwind.build.css --o _site/styles.css && ELEVENTY_PRODUCTION=true npx @11ty/eleventy",
+    "start": "concurrently \"eleventy --serve\" \"postcss tailwind.build.css --o _tmp/styles.css --watch\""
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0",
+    "@11ty/eleventy": "^0.11.1",
+    "autoprefixer": "^10.2.4",
+    "clean-css-cli": "^4.3.0",
+    "concurrently": "^5.3.0",
+    "html-minifier": "^4.0.0",
     "markdown-it": "^10.0.0",
+    "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^2.0.2",
     "uglifycss": "0.0.29"
   },
   "dependencies": {
-    "moment": "^2.25.3",
-    "tailwindcss": "^1.4.4"
+    "moment": "^2.25.3"
   }
 }
